# hello-agent-1

./: README.md  chatbot.py  pyproject.toml  pyvenv.cfg  requirements.txt
Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu  activate.ps1  activate_this.py
